# rumb

./: .gitignore  .mcp.json  Cargo.toml  README.md  TODOS.md
doc/: README.md  architecture.md  cli.md  concepts.md  data-model.md  development.md  getting-started.md  mcp.md  mvp-plan.md
doc/designs/: grooming-substrate.md
scripts/: build.sh  install.sh
src/: cli.rs  core.rs  lib.rs  main.rs  mcp_install.rs
src/core/: capture.rs  claims.rs  digest.rs  graph.rs  grooming.rs  history.rs  mod.rs  model.rs  replay.rs  store.rs  tests.rs  undo.rs
tests/: mcp_smoke.rs
