[package]
name = "rumb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
duckdb = { version = "1.10502.0", features = ["bundled"] }
rmcp = { version = "1.7.0", features = ["transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.12"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.19.1"
